[package]
name = "wei-daemon"
version = "0.3.1"
edition = "2021"
description = "wei daemon"
documentation = "https://github.com/zuiyue-com/wei-daemon"
homepage = "https://github.com/zuiyue-com/wei-daemon"
license = "MIT OR Apache-2.0"

# [lib]
# name = "wei_daemon"
# path = "src/lib.rs"

[profile.release]
opt-level = 'z'

[build-dependencies]
winres = "0.1"

[dependencies]
wei-run = "0.3.1"
wei-env = "0.2.13"
wei-log = "0.2.10"
wei-single = "0.3.6"
serde_yaml = "0.9"
tokio = { version = "1.28.1", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser", "wincon", "tlhelp32", "handleapi", "consoleapi", "processthreadsapi", "errhandlingapi", "minwinbase", "winnt"] }
# single-instance = "0.3"
dirs = "5.0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
# sha2 = "0.10.7"
[dev-dependencies]
tempfile = "3.8"
